cmake_minimum_required(VERSION 3.27)
project(exam_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(exam_cpp
        Animal.h
        Animal.cpp
        Mammal.h
        Mammal.cpp
        Bird.h
        Bird.cpp
        Reptile.cpp
        Reptile.h
        Reptile.h
        Zoo.cpp
        Zoo.h
        KNN.h
        KNNDouble.h
        KNNString.h
)
